# sudokusolve

./: CMakeLists.txt  grid.txt  main.cpp  sudoku_solver.cpp  sudoku_solver.h
problems/: some17.soln.txt  some17.txt
